@@ -53,7 +53,7 @@ This is most likely to happen after a system crash.
 .PP
 It is strongly recommended to run
 .B quotacheck
-with quotas turned off on for the filesystem. Otherwise, possible damage
+with quotas turned off for the filesystem. Otherwise, possible damage
 or loss to data in the quota files can result.  It is also unwise to
 run
 .B quotacheck
