@@ -27,5 +27,32 @@ I chose you to do the cleanup.|Delete group files on following filesystems:|
 # and PHONE is created).
 GROUP_SIGNATURE	= See you!|			Your admin|
 #
+#If you are running warnquota on a mail server, and don't want bounces
+#because clients can not receive mail setting this to true will cause
+#warnquota to not send them mail for all devices.  If you set this to the
+#device name (for example /dev/hdb1) then they will not be sent mail if they
+#are overquota on that device only, and will be sent mail for all other
+#devices.
+#MAILSERV        = "false"
+#
+# If you are using LDAP mail lookups.
+# host, port, tls, binddn, and bindpw are straight forward.
+# LDAP_BASEDN is your search base dn
+# LDAP_SEARCH_ATTRIBUTE is the attr for the value you are looking for
+# LDAP_MAIL_ATTRIBUTE is the attribute you want used for the mail address
+# LDAP_DEFAULT_MAIL_DOMAIN is the default domain
+#    if the attribute isn't found
+# if binddn and bindpw are blank or left out, an anonymous bind is used
+# 
+# LDAP_MAIL = false # or false if you don't want to use it
+# LDAP_HOST = ldap
+# LDAP_PORT = 389
+# LDAP_BINDDN = uid=ReadOnlyUser,o=YourOrg
+# LDAP_BINDPW = YourReadOnlyUserPassword
+# LDAP_BASEDN = YourSearchBase
+# LDAP_SEARCH_ATTRIBUTE = uid
+# LDAP_MAIL_ATTRIBUTE = mailLocalAddress
+# LDAP_DEFAULT_MAIL_DOMAIN = YourDefaultMailDomain.com
+#
 # end of example warnquota.conf file
 #
